# planfuzzer

./: .gitignore  CMakeLists.txt  INSTALL.md  PREREQUISITE.md  README.md  RUN.md  config.yml
Grammar-Mutator/grammars/: .gitignore
Grammar-Mutator/seeds/: 0  1  2  3  4  5  6  7  8  9
Grammar-Mutator/trees/: 0  1  2  3  4  5  6  7  8  9
data/: fuzz.dump
data/input/: AGG-1.txt  AGG-2.txt  AGG-3.txt  AGG-4.txt  APPEND-1.txt  APPEND-2.txt  BITMAPAND-1.txt  BITMAPHEAPSCAN-1.txt  BITMAPHEAPSCAN-2.txt  BITMAPHEAPSCAN-3.txt  CONST-1.txt  CONST-2.txt  FUNCTIONSCAN-1.txt  FUNCTIONSCAN-2.txt  GATHER-1.txt  GROUP-1.txt  HASHJOIN-1.txt  HASHJOIN-2.txt  HASHJOIN-3.txt  INDEXONLYSCAN-1.txt  INDEXSCAN-1.txt  INDEXSCAN-2.txt  LIMIT-1.txt  LIMIT-2.txt  LIMIT-3.txt  MATERIAL-1.txt  MATERIAL-2.txt  MERGEAPPEND-3.txt  MERGEJOIN-1.txt  MERGEJOIN-2.txt  NESTLOOP-1.txt  NESTLOOP-2.txt  PROJECTSET-2.txt  PROJECTSET-3.txt  PROJECTSET-5.txt  RESULT-1.txt  RESULT-2.txt  SEQSCAN-1.txt  SEQSCAN-2.txt  SEQSCAN-3.txt  (+12 more)
pg_cuckoo/PgCuckoo/: .gitignore  Makefile  PgCuckoo.cabal  config.ini  package.yaml  run.sh
pg_cuckoo/PgCuckoo/app/: Main.hs  cuckoo.hs  cuckoo_stub.h
pg_cuckoo/PgCuckoo/src/Database/PgCuckoo/: Extract.hs  GetTable.hs  InAST.hs  Inference.hs  Lib.hs  PgPlan.hs  Validate.hs
pg_cuckoo/PgExtension/src/: Makefile  cuckoo.c  install.sh
scripts/: Dockerfile  fuzz.sh  reproduce-bug.py
src/: db_driver.cc  plan.dict  seed2plan.cc
src/cuckoo/: Makefile  cuckoo_c.cpp
src/dbextension/: Makefile  planfuzzer--1.0.sql  planfuzzer.c  planfuzzer.control
src/grammar/: plan.json  postgresql.json
src/include/: client.h  client_postgresql.h  pgcuckoo.h  utils.h
src/postgresql/: client.cc  client_postgresql.cc  test_client.cc
src/preprocess/: preprocess.py  tree.py
